--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ requests==2.32.3
 retrying==1.3.4
 six==1.16.0
 soupsieve==2.5
-TA-Lib 
+ta-lib
 tenacity==8.3.0
 typing_extensions==4.12.0
 tzdata==2024.1
